k8s/dev-spectacle/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-spectacle-veeone-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.spectacle.veeone.kcp.bbp.epfl.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-spectacle-veeone-service
            port:
              number: 80
